<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl">

    <item
        android:id="@+id/new_immediate_silent_interval"
        android:icon="?attr/icon_add"
        android:title="@string/fragment_list_menu_immediate"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/new_silent_interval"
        android:title="@string/fragment_list_menu_schedule"
        app:showAsAction="never"/>

    <item
        android:id="@+id/edit_list"
        android:title="@string/fragment_list_menu_edit_list"
        app:showAsAction="never"/>

    <item
        android:id="@+id/settings"
        android:title="@string/fragment_list_menu_settings"
        app:showAsAction="never"/>

</menu>