<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="viewModel" type="com.lisaeva.silenttimer.viewmodel.SilentIntervalViewModel" />
        <variable name="handler" type="com.lisaeva.silenttimer.ui.ScheduleFragment" />
        <import type="android.view.View" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <!-- Title Box -->
            <EditText
                android:id="@+id/label_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:hint="@string/fragment_schedule_title_hint"
                android:maxLength="35"
                android:textSize="20dp"
                android:background="@null"
                android:text='@={viewModel.title, default="@string/fragment_schedule_title_hint"}'/>

            <!-- Horizontal Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="@android:color/darker_gray"/>

            <!-- Start Time and End Time section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="8dp">

                <!-- Start Time Box -->
                <TextView
                    android:id="@+id/start_date_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="30dp"
                    android:hint="@string/fragment_schedule_hint_start_time"
                    android:gravity="center"
                    android:text='@{viewModel.startDate, default="@string/fragment_schedule_hint_start_time"}'
                    android:onClick="@{()-> handler.onClickStartDate()}"/>

                <!-- Arrow Icon -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="?attr/icon_arrow"
                    android:layout_marginVertical="8dp"/>

                <!-- End Time Box -->
                <TextView
                    android:id="@+id/end_date_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="30dp"
                    android:hint="@string/fragment_schedule_hint_end_time"
                    android:gravity="center"
                    android:text='@{viewModel.endDate, default="@string/fragment_schedule_hint_end_time"}'
                    android:onClick="@{()-> handler.onClickEndDate()}"/>
            </LinearLayout>

            <!-- Horizontal Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="@android:color/darker_gray"/>

            <!-- Repeat Time checkbox-->
            <CheckBox
                android:id="@+id/checkbox_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/fragment_schedule_repeat_start_time"
                android:checked="@={viewModel.repeat}"/>

            <!-- Weekdays Checkbox section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="@{viewModel.repeat ? View.VISIBLE : View.GONE}">

                <!-- Sunday -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <CheckBox
                        android:id="@+id/checkbox_sunday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:checked="@={viewModel.sunday}"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_schedule_checkbox_sunday" />
                </LinearLayout>

                <!-- Monday -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <CheckBox
                        android:id="@+id/checkbox_monday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:checked="@={viewModel.monday}"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_schedule_checkbox_monday" />
                </LinearLayout>

                <!-- Tuesday -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <CheckBox
                        android:id="@+id/checkbox_tuesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:checked="@={viewModel.tuesday}"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_schedule_checkbox_tuesday" />
                </LinearLayout>

                <!-- Wednesday -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <CheckBox
                        android:id="@+id/checkbox_wednesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:checked="@={viewModel.wednesday}"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_schedule_checkbox_wednesday" />
                </LinearLayout>

                <!-- Thursday -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <CheckBox
                        android:id="@+id/checkbox_thursday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:checked="@={viewModel.thursday}"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_schedule_checkbox_thursday" />
                </LinearLayout>

                <!-- Friday -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <CheckBox
                        android:id="@+id/checkbox_friday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:checked="@={viewModel.friday}"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_schedule_checkbox_friday" />
                </LinearLayout>

                <!-- Saturday -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <CheckBox
                        android:id="@+id/checkbox_saturday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:checked="@={viewModel.saturday}"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_schedule_checkbox_saturday" />
                </LinearLayout>
            </LinearLayout>

            <!-- Show Description checkbox -->
            <CheckBox
                android:id="@+id/checkbox_show_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/fragment_schedule_checkbox_show_description"
                android:checked="@={viewModel.showDescription}"/>

            <!-- Description form -->
            <EditText
                android:id="@+id/label_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:inputType="textMultiLine"
                android:text="@={viewModel.description}"
                android:visibility="@{viewModel.showDescription ? View.VISIBLE : View.GONE }" />

            <!-- Duration Label -->
            <TextView
                android:id="@+id/label_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@{viewModel.duration}" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>